메인페이지 오류 해결, CVE-2025-63603 업로드
index.md 파일 삭제하니 해결됨

--- a/_posts/2025-03-24-AI코딩 어시스턴트를 이용한 해킹.md
+++ b/_posts/2025-03-24-AI코딩 어시스턴트를 이용한 해킹.md
@@ -4,7 +4,7 @@ title: AI 코딩 어시스턴트를 이용한 해킹
 date: 2025-03-24 20:55:00 +0800
 categories: [report]
 tags: [AI,cursor]
-pin: true
+#pin: true
 image:
   path: https://p0lestar.github.io/assets/img/ai-hack.webp
 sitemap:
