--- a/_posts/2025-11-17-OWASP TOP10 2025 copy.md
+++ b/_posts/2025-11-17-OWASP TOP10 2025 copy.md
@@ -4,7 +4,7 @@ title: OWASP top10 2025
 date: 2025-11-17 00:01:01 +0800
 categories: [OWASP]
 tags: [OWASP, OWASP top10]
-pin: true
+#pin: true
 sitemap:
   changefreq: monthly
   priority: 0.5
