--- a/_posts/2025-11-17-OWASP TOP10 2025.md
+++ b/_posts/2025-11-17-OWASP TOP10 2025.md
@@ -12,7 +12,7 @@ sitemap:
 # OWASP top 10 2025
 OWASP top10의 2025ver 이 나왔습니다.
 
-![image](https://owasp.org/Top10/assets/2025-mappings.png)
+![image](assets\img\owasp_2025.png)
 
 기존 2021 대비 크게 바뀌지 않고 순위만 조금씩 바뀐 모습입니다.
 
